ingress-nginx/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: nginx
  type: NodePort
