ingress-nginx/app-gomesh-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gomesh-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-issuer"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
    - host: gomesh.ml
      http:
        paths:
          - path: /
            backend:
              serviceName: node-app-service
              servicePort: 80
  tls:
    - hosts:
      - gomesh.ml
      secretName: certificate-name-gomesh
