ingress-nginx/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mysite.com
      http:
        paths:
          - path: /api(/|$)(.*)
            backend:
              serviceName: nginx
              servicePort: 80
