ingress-nginx/app-nytte-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nytte-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nytte.ml
      http:
        paths:
          - path: /
            backend:
              serviceName: node-app-service
              servicePort: 80
